prevent txt wrapping in visibility toggle

--- a/portfolio/src/scss/portfolio/_dropdown.scss
+++ b/portfolio/src/scss/portfolio/_dropdown.scss
@@ -26,6 +26,7 @@
 
   .dropdown-toggle {
     text-transform: capitalize;
+    white-space: nowrap;
     display: flex;
     align-items: center;
     position: relative;
